# 1.3.7

* Extract the default data URI image converter to the images module.

# 1.3.6

* Handle complex fields that do not have a "separate" fldChar.

# 1.3.5

* Add transforms.run.

# 1.3.4

* Read children of w:object elements.

# 1.3.3

* Handle hyperlinks created with complex fields.

# 1.3.2

* Handle absolute paths within zip files. This should fix an issue where some
  images within a document couldn't be found.

# 1.3.1

* Add getDescendants() and getDescendantsOfType() to transforms module.

* Add font property to runs.

# 1.3.0

* Allow style names to be mapped by prefix. For instance:

      r[style-name^='Code '] => code

* Add default style mappings for Heading 5 and Heading 6.

* Allow escape sequences in style IDs, style names and CSS class names.

* Allow a separator to be specified when HTML elements are collapsed.

* Add includeEmbeddedStyleMap option to allow embedded style maps to be
  disabled.

* Include embedded styles when explicit style map is passed.

# 1.2.5

* Ignore bold, italic, underline and strikethrough elements that have a value of
  false or 0.

# 1.2.4

* Ignore v:imagedata elements without relationship ID with warning.

# 1.2.3

* Expect end token when parsing style mappings. This causes warnings to be
  emitted instead of silenting ignoring unparsed tokens.

# 1.2.2

* Ignore blank lines in style map.

# 1.2.1

* Use alt text title as alt text for images when the alt text description is
  missing entirely.

# 1.2.0

* Throw more informative error when word/document.xml cannot be found.

* Generate messages of type "error" instead of "warning" when image conversion
  throws an exception.
  
* Use alt text title as alt text for images when the alt text description is
  blank.

# 1.1.0

* Add support for comments.

# 1.0.4

* Add support for w:sdt elements. This allows the bodies of content controls,
  such as bibliographies, to be converted.

* Avoid stack overflows when elements have many children.

# 1.0.3
