@@ -1,6 +1,8 @@
 exports.createBodyReader = createBodyReader;
 exports._readNumberingProperties = readNumberingProperties;
 
+var url = require("url");
+
 var _ = require("underscore");
 
 var documents = require("../documents");
@@ -210,6 +212,9 @@ function BodyReader(options) {
             return readXmlElements(element.children).map(function(children) {
                 if (relationshipId) {
                     var href = relationships[relationshipId].target;
+                    if (anchor) {
+                        href = url.resolve(href, "#" + anchor);
+                    }
                     return new documents.Hyperlink(children, {href: href});
                 } else if (anchor) {
                     return new documents.Hyperlink(children, {anchor: anchor});
